--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4486,6 +4486,14 @@ body.blocked {
   opacity: 0;
   transition: all 1.2s linear;
   transition-delay: .3s;
+
+  position: relative;
+  z-index: 4;
+}
+
+.screen.screen--about-beginning .block-content .block-content__bg-element .box {
+  background: rgba(255, 255, 255, 1)!important;
+  opacity: .7!important;
 }
 
 .screen.screen--about-beginning.active .block-content .block-content__title, .screen.screen--breaking-point.active .block-content .block-content__title , .screen.screen--about-mission.active .block-content .block-content__title {
@@ -4910,15 +4918,15 @@ body.blocked {
 }
 
 .screen.screen--services-list .block-content__items {
-  margin: 0 35px 0 35px;
+  margin: 0 0px 0 35px;
 }
 
 .screen.screen--services-list .block-content__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
-  padding-top: 40px;
+  /* padding-bottom: 40px;
+  padding-top: 40px; */
 
   border-bottom: 1px solid #302F2F;
 }
@@ -4951,6 +4959,9 @@ body.blocked {
 }
 
 .screen.screen--services-list .block-content__item-button {
+  height: 100%;
+  padding: 59px 35px;
+
   font-family: var(--main);
   font-weight: 800;
   font-size: 3rem;
@@ -4958,6 +4969,35 @@ body.blocked {
   color: var(--white);
   letter-spacing: 1px;
   text-wrap: nowrap;
+
+  position: relative;
+  z-index: 1;
+}
+
+.screen.screen--services-list .block-content__item-button::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  display: block;
+
+  background: linear-gradient(180deg, rgba(1,224,255,1) 0%, rgba(1,131,255,0.591474) 37%, rgba(20,20,20,0.2049194677871149) 91%);
+
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+
+  transform: rotateX(90deg);
+  opacity: 0;
+  transition: all .4s linear;
+
+}
+
+.screen.screen--services-list .block-content__item-button:hover::after {
+  transform: rotateX(0);
+  opacity: 1;
+  transition: all .4s linear;
 }
 
 .screen.screen--information.screen--white .block-content-info-button {
@@ -6857,7 +6897,12 @@ body.blocked {
   }
 
   .screen.screen--services-list .block-content__item-button {
+    padding: 0;
     font-size: 2.4rem;
+  }
+
+  .screen.screen--services-list .block-content__item-button::after {
+    display: none;
   }
 
   .screen.screen--services-list .block-content__item-text {
